hphp/hack/test/typecheck/enum/bad/trivial_compare_string_enum_to_int_bad.php
<?hh

enum A: string as string {
  X = "X";
}

function f(int $x): bool {
  return $x === A::X;
}

function g(int $x): bool {
  return $x !== A::X;
}
