hphp/hack/test/typecheck/enum/bad/trivial_compare_string_enum_to_int_bad.php.exp
WARN: File "trivial_compare_string_enum_to_int_bad.php", line 8, characters 10-20:
Invalid comparison: This expression will always return `false`.
A value of type `int` can never be equal to a value of type `A` (Warn[12007])
WARN: File "trivial_compare_string_enum_to_int_bad.php", line 12, characters 10-20:
Invalid comparison: This expression will always return `true`.
A value of type `int` can never be equal to a value of type `A` (Warn[12007])
ERROR: File "trivial_compare_string_enum_to_int_bad.php", line 8, characters 10-20:
This expression is always `false` (Typing[4118])
  File "trivial_compare_string_enum_to_int_bad.php", line 7, characters 12-14:
  This is an int
  File "trivial_compare_string_enum_to_int_bad.php", line 3, characters 19-24:
  This is a string
ERROR: File "trivial_compare_string_enum_to_int_bad.php", line 12, characters 10-20:
This expression is always `true` (Typing[4118])
  File "trivial_compare_string_enum_to_int_bad.php", line 11, characters 12-14:
  This is an int
  File "trivial_compare_string_enum_to_int_bad.php", line 3, characters 19-24:
  This is a string
